# noxU

./: .gitignore  README.md  pyproject.toml
app/api/: __main__.py  dependencies.py
app/api/routers/: analyse.py  items.py  order_content.py  orders.py  production_log.py  qrcodes.py  statuses.py  users.py
app/api/schemas/: schemas.py
app/db/: __main__.py  database.py  models.py  mydb.db  seed.json
app/db/cruds/: items.py  order_content.py  orders.py  production_log.py  statuses.py  users.py
app/yolo_model/: model_utils.py
db/: __main__.py  database.py  models.py
