[tool.poetry]
name = "noxu"
version = "0.1.0"
description = "REST API applicaton for a database designed for noxU - 	Image recognition system for order completeness check"
authors = ["Szymon Sobczak<259275@student.pwr.edu.pl>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.104.1"
sqlalchemy = "^2.0.22"
uvicorn = "^0.23.2"
autopep8 = "^2.0.4"
sqlalchemy-seeder = "^0.3.0"
ultralytics = "^8.0.207"
torch = ">=2.0.0, !=2.0.1, !=2.1.0"
python-multipart = "^0.0.6"
qreader = "^3.12"
qrcode = "^7.4.2"

[tool.isort]
profile = "black"
src_paths = ["src", "tests"]
skip = [".gitignore"]
extend_skip = [".md", ".rst", ".json", ".txt"]
skip_glob = ["docs/*"]
line_length = 100
lines_after_imports = 2
lines_between_types = 1
force_alphabetical_sort_within_sections = true
force_sort_within_sections = true

[tool.black]
line-length = 100

[tool.poetry.group.dev.dependencies]
taskipy = "^1.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]
format = "isort ./app ./db && black ./app ./db "
lint = """
    pylint ./app ./db  && \
    black ./app ./db  && \
"""
